Reinstate keyword fixup code to fix regression. b=143080 r=valeski@netscape.com sr=rpotts@netscape.com